# backend_app/models/access_code_models.py
@@ -5,7 +5,7 @@ class AccessCode(db.Model):
     __tablename__ = 'access_codes'
 
     id = db.Column(db.Integer, primary_key=True)
-    access_code = db.Column(db.String(255))
+    access_code = db.Column(db.String(6))
 
     def __init__(self, access_code):
         self.access_code = access_code
